--- a/client/src/styles/_fonts.scss
+++ b/client/src/styles/_fonts.scss
@@ -3,10 +3,12 @@
 @font-face {
   font-family: "Lato";
   src: url("../assets/fonts/Lato-Regular.ttf");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Lato";
   src: url("../assets/fonts/Lato-Bold.ttf");
   font-weight: bold;
+  font-display: swap;
 }
