optimized folder structure for deployment, fixed visual bugs

--- a/client/src/shared/scrollOnTop/scrollOnTop.module.scss
+++ b/client/src/shared/scrollOnTop/scrollOnTop.module.scss
@@ -1,12 +1,13 @@
 .layout {
   position: fixed;
   width: 100%;
-  bottom: 10px;
+  bottom: 70px;
 }
 
 .wrapper {
   margin: 0 auto;
   max-width: 1000px;
+  padding: 0px 20px;
   display: flex;
   justify-content: flex-end;
 }
