--- a/client/src/shared/pagination/pagesBar.module.scss
+++ b/client/src/shared/pagination/pagesBar.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin: 30px 0px;
   align-items: center;
   gap: 10px;
   font-size: 25px;
