--- a/client/src/shared/scrollOnTop/scrollOnTop.module.scss
+++ b/client/src/shared/scrollOnTop/scrollOnTop.module.scss
@@ -1,7 +1,7 @@
 .layout {
   position: fixed;
   width: 100%;
-  bottom: 70px;
+  bottom: 10px;
 }
 
 .wrapper {
@@ -24,6 +24,7 @@
   cursor: pointer;
   z-index: 2;
   -webkit-tap-highlight-color: transparent;
+  animation: appear 0.4s ease-out;
 
   &:hover,
   &:active {
@@ -32,6 +33,15 @@
   &_icon {
     display: block;
     margin: auto;
+  }
+}
+
+@keyframes appear {
+  0% {
+    opacity: 0%;
+  }
+  100% {
+    opacity: 100%;
   }
 }
 
