--- a/client/src/shared/navbar/components/desktop/navDesktop.module.scss
+++ b/client/src/shared/navbar/components/desktop/navDesktop.module.scss
@@ -1,10 +1,7 @@
 @import "styles/mixins";
 
 .layout {
-  position: sticky;
-  top: 0;
-  width: 100%;
-  z-index: 3;
+  @include nav-layout;
   background-color: var(--bg-color);
 }
 
